test main index

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <!-- Portfolio Start -->
     <div class="container-fluid pt-5 pb-3" id="work">
-        <div class="container mb-0" >
+        <div class="container" >
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">`</h1>
                 <h1 class="position-absolute text-uppercase text-primary">My Work</h1>
@@ -107,16 +107,18 @@
             <h3 class=" text-uppercase text-primary">Synergistic Solutions</h3>
             <p>I worked on this project as a front-end developer working with React JS during my tenure at ArtribeBPO. This is a site for a logistics company.</p>
             <div class="row portfolio-container">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/syner1.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/syner1.JPG" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                
+<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+    <div class="position-relative overflow-hidden mb-2">
+        <img class="img-fluid rounded w-100" src="img/syner2.JPG" alt="">
+        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+            <a href="img/syner2.JPG" data-lightbox="portfolio">
+                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+            </a>
+        </div>
+    </div>
+</div>
+
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/syner2.JPG" alt="">
@@ -139,6 +141,7 @@
                 </div>
             </div>
         </div>
+        <div style="margin-top: 5rem;"></div>
         <!-- UNCHARTED -->
         <div class="container mt-5"  >
             <h3 class=" text-uppercase text-primary">Uncharted Solutions</h3>
