--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/unch1.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/syner1.JPG" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/unch1.png" data-lightbox="portfolio">
+                            <a href="img/syner1.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
