--- a/index.html
+++ b/index.html
@@ -99,26 +99,22 @@
 
     <!-- Portfolio Start -->
     <div class="container-fluid pt-5 pb-3" id="work">
-        <!-- <div class="container" >
-            <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">`</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Work</h1>
-            </div>
+        <!-- Syner -->
+        <div class="container mt-5">
             <h3 class=" text-uppercase text-primary">Synergistic Solutions</h3>
-            <p>I worked on this project as a front-end developer working with React JS during my tenure at ArtribeBPO. This is a site for a logistics company.</p>
+            <p>I worked on this project as a front-end developer working with React JS during my tenure at ArtribeBPO. This is a site
+            for a logistics company.</p>
             <div class="row portfolio-container">
-                
-<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
-    <div class="position-relative overflow-hidden mb-2">
-        <img class="img-fluid rounded w-100" src="img/syner2.JPG" alt="">
-        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-            <a href="img/syner2.JPG" data-lightbox="portfolio">
-                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-            </a>
-        </div>
-    </div>
-</div>
-
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/syner1.JPG" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="img/syner1.JPG" data-lightbox="portfolio">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/syner2.JPG" alt="">
@@ -134,44 +130,6 @@
                         <img class="img-fluid rounded w-100" src="img/syner3.JPG" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="img/syner3.JPG" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <!-- UNCHARTED -->
-        <div class="container mt-5">
-            <h3 class=" text-uppercase text-primary">Uncharted Solutions</h3>
-            <p>I worked as a full stack developer on Uncharted Solutions. This website was for a travel agency and themed around
-                Carribbean pirates</p>
-            <div class="row portfolio-container">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/syner1.JPG" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/syner1.JPG" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/unch2.png" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/unch2.png" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/unch3.JPG" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/unch3.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
