My work heading updated

--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@
 
     <!-- Portfolio Start -->
     <div class="container-fluid pt-5 pb-3" id="work">
+       
         <!-- Syner -->
         <div class="container mt-5">
+            <div class="position-relative d-flex align-items-center justify-content-center">
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">`</h1>
+                <h1 class="position-absolute text-uppercase text-primary">My Work</h1>
+            </div>
             <h3 class=" text-uppercase text-primary">Synergistic Solutions</h3>
             <p>I worked on this project as a front-end developer working with React JS during my tenure at ArtribeBPO. This is a site
             for a logistics company.</p>
